<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#cecccc"
        android:ellipsize="none"
        android:gravity="bottom|end"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/_0"
        android:textIsSelectable="true"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".20">

            <Button
                android:id="@+id/button1"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/ac"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/percentage"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/dividision"
                android:backgroundTint="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".20">

            <Button
                android:id="@+id/button5"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button7"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button8"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:backgroundTint="@color/black"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".20">

            <Button
                android:id="@+id/button9"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button10"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button11"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button12"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/minus"
                android:backgroundTint="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".20">

            <Button
                android:id="@+id/button13"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_7" />

            <Button
                android:id="@+id/button14"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button15"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_9" />

            <Button
                android:id="@+id/button16"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/plus"
                android:backgroundTint="@color/black"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".20">

            <Button
                android:id="@+id/button17"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_0_btn" />

            <Button
                android:id="@+id/button18"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/dot"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/button19"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/del"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/button20"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:text="@string/_equal"
                android:backgroundTint="@color/black"/>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>